# Chat-Orchestrate

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DISTRIBUTED_COORDINATION.md  FILE_LAYOUT.md  PROJECT_SPACES.md
docs/mockups/: distributed-harness-mockup.html  two-machine-sim-report.html
public/: chat-orchestrate.css  harness-panels.js
public/elements/: HarnessDashboard.jsx  HarnessDashboardV2.jsx
scripts/: preview_workspace.ps1  preview_workspace.py  preview_workspace.sh  run_chainlit.py  run_coordinator.ps1  run_coordinator.py  run_coordinator.sh  run_local.ps1  run_local.py  run_local.sh  run_worker.ps1  run_worker.py  run_worker.sh  setup.ps1  setup.sh  terminal_control.py
src/chat_orchestrate/: __init__.py  a2a.py  api_harness.py  artifacts.py  backends.py  capabilities.py  chainlit_app.py  config.py  coordination.py  coordinator_server.py  models.py  orchestrator.py  project_space.py  runtime_config.py  scaffold.py  summaries.py  swarm_client.py  ui_state.py  worker.py
tests/: test_a2a.py  test_api_harness.py  test_artifacts.py  test_capabilities.py  test_coordination.py  test_coordinator_server.py  test_orchestrator.py  test_project_space.py  test_summaries.py  test_swarm_client.py  test_ui_state.py  test_worker_recovery.py
