[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-orchestrate"
version = "0.1.0"
description = "Chainlit UI for OpenSwarm multi-agent orchestration over project workspaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=2.0.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "starlette>=0.47.2,<0.51",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
